Ajout CI/CD pipeline configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.5"
+  },
+  "scripts": {
+    "test": "hardhat test",
+    "coverage": "hardhat coverage"
   }
 }
