--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,25 @@
-name: CI/CD for Solidity Project
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x]
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20'
 
     - name: Install dependencies
       run: npm install
@@ -31,3 +29,16 @@ jobs:
 
     - name: Run tests
       run: npx hardhat test
+
+    - name: Upload test coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage/
+
+    - name: Deploy to Rinkeby
+      if: github.ref == 'refs/heads/main'
+      env:
+        RINKEBY_URL: ${{ secrets.RINKEBY_URL }}
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      run: npx hardhat deploy --network rinkeby
