--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: backend
 
     - name: Compile contracts
       run: npx hardhat compile
+      working-directory: backend
 
     - name: Run tests
       run: npx hardhat test
+      working-directory: backend
