--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "test": "hardhat test",
     "coverage": "hardhat coverage"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2"
   }
 }
