--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,21 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@rainbow-me/rainbowkit": "^2.1.2",
-    "@tanstack/react-query": "^5.48.0",
+    "@rainbow-me/rainbowkit": "^2.1.3",
+    "@tanstack/react-query": "^5.50.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "pino-pretty": "^11.2.1",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.16.2",
-    "wagmi": "^2.10.7"
+    "viem": "^2.17.1",
+    "wagmi": "^2.10.9"
   },
   "devDependencies": {
     "postcss": "^8",
