--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
+          npm install --force
           npm install @nomiclabs/hardhat-ethers@^2.2.3 --force
         working-directory: backend
 
