--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Solidity Project
+name: CI/CD for DivesLedger
 
 on:
   push:
@@ -77,11 +77,12 @@ jobs:
           cd frontend
           npm run build
 
-          - name: Deploy on Vercel
+      - name: Deploy on Vercel
           env:
-            VERCEL_ID: ${{ secrets.VERCEL_ID }}
+            VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           run: |
+            npm install -g vercel
             cd frontend
-            DEPLOY_URL=$(npx vercel --prod --token $VERCEL_ID | tail -n 1)
+            DEPLOY_URL=$(vercel --prod --token $VERCEL_TOKEN | tail -n 1)
             echo "Deployment URL: $DEPLOY_URL"
             echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
