--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "22.x"
 
       - name: Install dependencies - backend
         run: |
@@ -57,6 +57,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -78,11 +79,11 @@ jobs:
           npm run build
 
       - name: Deploy on Vercel
-          env:
-            VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          run: |
-            npm install -g vercel
-            cd frontend
-            DEPLOY_URL=$(vercel --prod --token $VERCEL_TOKEN | tail -n 1)
-            echo "Deployment URL: $DEPLOY_URL"
-            echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          npm install -g vercel
+          cd frontend
+          DEPLOY_URL=$(vercel --prod --token $VERCEL_TOKEN | tail -n 1)
+          echo "Deployment URL: $DEPLOY_URL"
+          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
