--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "22.x"
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies - backend
         run: |
@@ -78,13 +78,13 @@ jobs:
           cd frontend
           npm run build
 
-          - name: Debug environment variables
-          run: |
-            echo "ALCHEMY=${{ env.ALCHEMY }}"
-            echo "PK=${{ env.PK }}"
-            echo "ETHERSCAN=${{ env.ETHERSCAN }}"
-            echo "VERCEL_TOKEN=${{ env.VERCEL_TOKEN }}"
-          working-directory: backend
+      - name: Debug environment variables
+        run: |
+          echo "ALCHEMY=${{ env.ALCHEMY }}"
+          echo "PK=${{ env.PK }}"
+          echo "ETHERSCAN=${{ env.ETHERSCAN }}"
+          echo "VERCEL_TOKEN=${{ env.VERCEL_TOKEN }}"
+        working-directory: backend
 
       - name: Deploy on Vercel
         env:
