fix Vercel ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,14 +84,4 @@ jobs:
         run: |
           npm install -g vercel
           cd frontend
-          DEPLOY_URL=$(vercel --prod --token $VERCEL_TOKEN | tail -n 1)
-          echo "Deployment URL: $DEPLOY_URL"
-          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
-
-      - name: Debug environment variables
-        run: |
-          echo "ALCHEMY=${{ env.ALCHEMY }}" >> $GITHUB_ENV
-          echo "PK=${{ env.PK }}" >> $GITHUB_ENV
-          echo "ETHERSCAN=${{ env.ETHERSCAN }}" >> $GITHUB_ENV
-          echo "VERCEL_TOKEN=${{ env.VERCEL_TOKEN }}" >> $GITHUB_ENV
-        working-directory: backend
+          vercel --prod --token $VERCEL_TOKEN
