--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,25 @@ jobs:
         run: npx hardhat run --network localhost scripts/DivesLedger.js
         working-directory: backend
         if: github.ref == 'refs/heads/main'
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install dependencies - frontend
+        run: |
+          cd frontend
+          npm install
+
+      - name: Build Next.js application
+        run: |
+          cd frontend
+          npm run build
