--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,3 +73,11 @@ jobs:
         run: |
           cd frontend
           npm run build
+
+      - name: Deploy on Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          npm install -g vercel
+          cd frontend  # Assurez-vous que le chemin d'accès est correct pour accéder à votre application frontend
+          vercel --prod --token $VERCEL_TOKEN
