--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,9 +75,7 @@ jobs:
           npm run build
 
       - name: Deploy on Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
           npm install -g vercel
-          cd frontend  # Assurez-vous que le chemin d'accès est correct pour accéder à votre application frontend
-          vercel --prod --token $VERCEL_TOKEN
+          cd frontend
+          vercel --prod --token UB6avaQcabrojrZHSm2ZrUaY
